--- a/position.html
+++ b/position.html
@@ -9,6 +9,7 @@
 <body style="
     height: 3000px;
     padding-top: 60px;
+    padding-left: 80px;
 ">
     <div style="
             background-color: black;
@@ -21,6 +22,19 @@
         ">
         header
     </div>
+
+    <div style="
+        background-color: green;
+        color: white;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        top: 50px;
+        width: 72px;
+    ">
+        sidebar
+    </div>
+
     <div style="
             background-color: lightblue;
             height: 200px;
