--- a/youtube.html
+++ b/youtube.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/video.css">
+    <link rel="stylesheet" href="styles/sidebar.css">
 </head>
 
 <body style="padding-bottom: 1000px;">
@@ -33,6 +34,10 @@
             <img class="notifications-icon" src="icons/notifications.svg">
             <img class="current-user-icon" src="channel-pictures/my-channel.jpeg">
         </div>
+    </div>
+
+    <div class="sidebar">
+        sidebar
     </div>
 
     <div class="vid-grid">
