--- a/exercises/exercise-14.html
+++ b/exercises/exercise-14.html
@@ -33,6 +33,24 @@
             width: 500px;
             height: 150px;
         }
+
+        .title {
+            font-size: 30px;
+            font-weight: bold;
+            margin-left: 20px;
+            margin-top: 20px;
+            margin-bottom: 10px;
+        }
+
+        .description {
+            margin-left: 20px;
+            margin-bottom: 8px;
+            font-size: 20px;
+        }
+
+        .close-btn {
+            margin-left: 20px;
+        }
     </style>
 </head>
 
@@ -48,7 +66,7 @@
             <div class="description">
                 This is a modal
             </div>
-            <button class="close-bth">
+            <button class="close-btn">
                 Close
             </button>
         </div>
