--- a/position.html
+++ b/position.html
@@ -19,6 +19,7 @@
             left: 0;
             right: 0;
             height: 50px;
+            z-index: 1;
         ">
         header
     </div>
@@ -39,8 +40,9 @@
         position: absolute;
         background-color: red;
         color: white;
-        top:0;
-        left:0;
+        top:60px;
+        right:0;
+        /* z-index: 2; */
     ">
         absolute
     </div>
