--- a/position.html
+++ b/position.html
@@ -66,8 +66,18 @@
             background-color: lightpink;
             height: 200px;
             width: 200px;
+            position: relative;
         ">
         div 2
+        <div style="
+            position: absolute;
+            background-color: black;
+            color: white;
+            bottom: 10px;
+            right:10px;
+        ">
+            5:00
+        </div>
     </div>
 </body>
 
