--- a/youtube.html
+++ b/youtube.html
@@ -67,6 +67,7 @@
         <div class="vid-preview">
             <div class="thumbnail-row"> <!-- first vertical layout -->
                 <img src="thumbnails/thumbnail-2.webp" class="thumbnail">
+                <div class="vid-time">8:22</div>
             </div>
             <div class="vid-info-grid"> <!-- second vertical layout -->
                 <div class="channel-picture"> <!-- first horizontal layout -->
@@ -89,6 +90,7 @@
         <div class="vid-preview">
             <div class="thumbnail-row"> <!-- first vertical layout -->
                 <img src="thumbnails/thumbnail-4.webp" class="thumbnail">
+                <div class="vid-time">22:09</div>
             </div>
             <div class="vid-info-grid"> <!-- second vertical layout -->
                 <div class="channel-picture"> <!-- first horizontal layout -->
@@ -111,6 +113,7 @@
         <div class="vid-preview">
             <div class="thumbnail-row"> <!-- first vertical layout -->
                 <img src="thumbnails/thumbnail-4.webp" class="thumbnail">
+                <div class="vid-time">22:09</div>
             </div>
             <div class="vid-info-grid"> <!-- second vertical layout -->
                 <div class="channel-picture"> <!-- first horizontal layout -->
@@ -133,6 +136,7 @@
         <div class="vid-preview">
             <div class="thumbnail-row"> <!-- first vertical layout -->
                 <img src="thumbnails/thumbnail-5.webp" class="thumbnail">
+                <div class="vid-time">11:17</div>
             </div>
             <div class="vid-info-grid"> <!-- second vertical layout -->
                 <div class="channel-picture"> <!-- first horizontal layout -->
@@ -155,6 +159,7 @@
         <div class="vid-preview">
             <div class="thumbnail-row"> <!-- first vertical layout -->
                 <img src="thumbnails/thumbnail-6.webp" class="thumbnail">
+                <div class="vid-time">19:59</div>
             </div>
             <div class="vid-info-grid"> <!-- second vertical layout -->
                 <div class="channel-picture"> <!-- first horizontal layout -->
