--- a/exercises/exercise-15.html
+++ b/exercises/exercise-15.html
@@ -12,19 +12,23 @@
         }
 
         .cross-icon {
-            border-radius: 60px;
+            border-radius: 30px;
             background-color: black;
             color: white;
-            width: 20px;
+            width: 40px;
+            height: 40px;
             font-weight: 500;
             padding-top: 10px;
             padding-bottom: 10px;
-            padding-right: 2px;
+            padding-right: 10px;
             padding-left: 10px;
             position: absolute;
             top: -15px;
             left: -15px;
             font-size: 15px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .timestamp {
