--- a/youtube.html
+++ b/youtube.html
@@ -27,6 +27,7 @@
             </button>
             <button class="voice-search-button">
                 <img class="voice-search-icon" src="icons/voice-search-icon.svg">
+                <div class="tooltip">Search with voice</div>
             </button>
         </div>
         <div class="right-section">
