--- a/youtube.html
+++ b/youtube.html
@@ -88,6 +88,13 @@
                     <a href="https://www.youtube.com/c/mkbhd" target="_blank">
                         <img class="profile-picture" src="channel-pictures/channel-1.jpeg">
                     </a>
+                    <div class="channel-tooltip">
+                        <img class="channel-tooltip-picture" src="channel-pictures/channel-1.jpeg">
+                        <div>
+                            <p class="channel-tooltip-name">Marques Bownlee</p>
+                            <p class="channel-tooltip-stats">15M subscribers</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="vid-info"> <!-- second horizontal layout -->
                     <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
@@ -117,6 +124,13 @@
                     <a href="https://www.youtube.com/c/markiplier" target="_blank">
                         <img class="profile-picture" src="channel-pictures/channel-2.jpeg">
                     </a>
+                    <div class="channel-tooltip">
+                        <img class="channel-tooltip-picture" src="channel-pictures/channel-2.jpeg">
+                        <div>
+                            <p class="channel-tooltip-name">Markiplier</p>
+                            <p class="channel-tooltip-stats">30M subscribers</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="vid-info"> <!-- second horizontal layout -->
                     <a href="https://www.youtube.com/watch?v=mP0RAo9SKZk" target="_blank" class="video-title-link">
@@ -146,6 +160,17 @@
                     <a href="https://www.youtube.com/c/veritasium" target="_blank">
                         <img class="profile-picture" src="channel-pictures/channel-4.jpeg">
                     </a>
+                    <div class="channel-tooltip">
+                        <img class="channel-tooltip-picture" src="channel-pictures/channel-4.jpeg">
+                        <div>
+                            <div class="channel-tooltip-name">
+                                Veritasium
+                            </div>
+                            <div class="channel-tooltip-stats">
+                                18M subscribers
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="vid-info"> <!-- second horizontal layout -->
                     <a href="https://www.youtube.com/watch?v=094y1Z2wpJg" target="_blank" class="video-title-link">
@@ -175,6 +200,17 @@
                     <a href="https://www.youtube.com/c/veritasium" target="_blank">
                         <img class="profile-picture" src="channel-pictures/channel-4.jpeg">
                     </a>
+                    <div class="channel-tooltip">
+                        <img class="channel-tooltip-picture" src="channel-pictures/channel-4.jpeg">
+                        <div>
+                            <div class="channel-tooltip-name">
+                                Veritasium
+                            </div>
+                            <div class="channel-tooltip-stats">
+                                18M subscribers
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="vid-info"> <!-- second horizontal layout -->
                     <a href="https://www.youtube.com/watch?v=094y1Z2wpJg" target="_blank" class="video-title-link">
@@ -204,6 +240,17 @@
                     <a href="https://www.youtube.com/c/CSDojo" target="_blank">
                         <img class="profile-picture" src="channel-pictures/channel-5.jpeg">
                     </a>
+                    <div class="channel-tooltip">
+                        <img class="channel-tooltip-picture" src="channel-pictures/channel-5.jpeg">
+                        <div>
+                            <div class="channel-tooltip-name">
+                                CS Dojo
+                            </div>
+                            <div class="channel-tooltip-stats">
+                                1.79M subscribers
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="vid-info"> <!-- second horizontal layout -->
                     <a href="https://www.youtube.com/watch?v=86CQq3pKSUw" target="_blank" class="video-title-link">
@@ -233,6 +280,17 @@
                     <a href="https://www.youtube.com/@MrBeast" target="_blank">
                         <img class="profile-picture" src="channel-pictures/channel-6.jpeg">
                     </a>
+                    <div class="channel-tooltip">
+                        <img class="channel-tooltip-picture" src="channel-pictures/channel-6.jpeg">
+                        <div>
+                            <div class="channel-tooltip-name">
+                                MrBeast
+                            </div>
+                            <div class="channel-tooltip-stats">
+                                300M subscribers
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="vid-info"> <!-- second horizontal layout -->
                     <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg" target="_blank" class="video-title-link">
